--- a/style/HallOfFame.css
+++ b/style/HallOfFame.css
@@ -1,7 +1,10 @@
 body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    font-family: "Macondo", cursive;
+    font-weight: 1000;
+    font-style: normal;
+    color: #14142c;
 }
 
 .profiles-container {
@@ -36,3 +39,6 @@ body {
     margin: 5px 0;
 }
 
+h2{
+    padding-bottom: 1rem;
+}
